[package]
name = "dbhub_vis"
version = "0.1.0"
authors = ["Justin Clift <justin@postgresql.org>"]
edition = "2018"
description = "This is the Rust (wasm) code used to present visualisation data on DBHub.io"
license = "AGPL-3.0-or-later"
repository = "https://github.com/sqlitebrowser/dbhub.io"
readme = "README.md"
homepage = "https://dbhub.io"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.59", features = ["serde-serialize"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
#lazy_static = "1.4.0"
js-sys = "0.3.36"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6" }

[dependencies.web-sys]
version = "0.3.36"
features = [
  'CanvasRenderingContext2d',
  'TextMetrics',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
]
